syntax = "proto3";
package ununifi.decentralizedvault;

import "gogoproto/gogo.proto";
import "decentralized-vault/params.proto";

option go_package = "github.com/UnUniFi/chain/x/decentralized-vault/types";

message TransferRequest {
  string owner       = 1;
  string eth_address = 2;
  string nft_id      = 3;
}