syntax = "proto3";
package ununifi.nftfactory;

import "gogoproto/gogo.proto";
import "ununifi/nft/nft.proto";
import "ununifi/nftfactory/nftfactory.proto";

option go_package = "github.com/UnUniFi/chain/x/nftfactory/types";

service Msg {
  rpc CreateClass(MsgCreateClass) returns (MsgCreateClassResponse);
  rpc UpdateClass(MsgUpdateClass) returns (MsgUpdateClassResponse);
  rpc MintNFT(MsgMintNFT) returns (MsgMintNFTResponse);
  rpc BurnNFT(MsgBurnNFT) returns (MsgBurnNFTResponse);
  rpc ChangeAdmin(MsgChangeAdmin) returns (MsgChangeAdminResponse);
}

message MsgCreateClass {
  string                sender      = 1;
  string                id          = 2;
  string                name        = 3;
  string                symbol      = 4;
  string                description = 5;
  string                uri         = 6;
  string                uri_hash    = 7;
  ununifi.nft.ClassData data        = 8;
}
message MsgCreateClassResponse {}

message MsgUpdateClass {
  string                sender      = 1;
  string                class_id    = 2;
  string                name        = 3;
  string                symbol      = 4;
  string                description = 5;
  string                uri         = 6;
  string                uri_hash    = 7;
  ununifi.nft.ClassData data        = 8;
}
message MsgUpdateClassResponse {}

message MsgMintNFT {
  string sender    = 1;
  string class_id  = 2;
  string nft_id    = 3;
  string recipient = 4;
}
message MsgMintNFTResponse {}

message MsgBurnNFT {
  string sender   = 1;
  string class_id = 2;
  string nft_id   = 3;
}
message MsgBurnNFTResponse {}

// MsgChangeAdmin is the sdk.Msg type for allowing an admin account to reassign
// adminship of a class to a new account
message MsgChangeAdmin {
  string sender = 1 [ (gogoproto.moretags) = "yaml:\"sender\"" ];
  string class_id = 2 [ (gogoproto.moretags) = "yaml:\"class_id\"" ];
  string new_admin = 3 [ (gogoproto.moretags) = "yaml:\"new_admin\"" ];
}

message MsgChangeAdminResponse {}